test/e2e/features/waypoint/testdata/authz-complex-rules.yaml
# This is the rule that includes source, multiple methods, and multiple paths. 
# It is used to test the case where the source is a service account in a very specific source
# The rule is applied to the service svc-a.
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authz-complex-rules
spec:
  action: DENY
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/waypoint-test-ns/sa/notcurl"]
    to:
    - operation:
        methods: ["GET", "POST"]
        paths: ["/admin/*"]
  targetRefs:
  - group: ""
    kind: Service
    name: svc-a
