test/e2e/features/waypoint/testdata/authz-deny-notcurl-svc-b.yaml
# This is a very narrow test case where we checking how the call filtering 
# can be customized for a very limited surface of the Istio Authz policies.
# The rule is applied to the service svc-b only when the call is get, comes to port 8080 from the pod 
# with the service account notcurl.
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authz-deny-notcurl-svc-b
spec:
  action: DENY
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/waypoint-test-ns/sa/notcurl"]
    to:
    - operation:
        methods: ["GET"]
        ports: ["8080"]
  targetRefs:
  - group: ""
    kind: Service
    name: svc-b
