test/e2e/features/waypoint/testdata/authz-gateway-ref.yaml

# This is a test case where we check how the Gateway reference in the Authz policy is working.
# The policy is applied to the Gateway test-waypoint. the namespace location is defined in the test suite.
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authz-gateway-ref
spec:
  action: DENY
  rules:
  - to:
    - operation:
        methods: ["GET"]
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: test-waypoint
