test/e2e/features/waypoint/testdata/authz-gatewayclass-ref.yaml

# This is a test case where we check how the GatewayClass reference in the Authz policy is working.
# The policy is applied to the GatewayClass kgateway-waypoint. the namespace location is defined in the test suite.
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authz-gatewayclass-ref
spec:
  action: DENY
  rules:
  - to:
    - operation:
        methods: ["GET"]
        ports: ["8080"]
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: GatewayClass
    name: kgateway-waypoint
