test/e2e/features/waypoint/testdata/authz-multi-service.yaml
# This is a test case where we check how the Authz policy is 
# working for multiple TargetRefs via list.
# for simplication we target services.
# The policy is applied to the service svc-a and svc-b.
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authz-multi-service
spec:
  action: DENY
  rules:
  - to:
    - operation:
        methods: ["GET"]
        ports: ["8080"]
  targetRefs:
  - group: ""
    kind: Service
    name: svc-a
  - group: ""
    kind: Service
    name: svc-b
