test/e2e/features/waypoint/testdata/authz-serviceentry.yaml

# This is a test case where we check how the Authz policy is working for a ServiceEntry.
# The policy is applied to the ServiceEntry se-b created by the test suite.
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authz-serviceentry
spec:
  action: DENY
  rules:
  - to:
    - operation:
        methods: ["GET"]
        ports: ["8080"]
  targetRefs:
  - group: networking.istio.io
    kind: ServiceEntry
    name: se-b
