test/e2e/features/waypoint/testdata/httproute-hostname.yaml
---
# HTTPRoute parented to the Service via a hostname only affects one chain
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hr-traversed-waypoint-header
spec:
  parentRefs:
  - name: se-a.serviceentry.com
    group: "networking.istio.io"
    kind: Hostname
  rules:
  - backendRefs:
    - name: se-a.serviceentry.com
      group: "networking.istio.io"
      kind: Hostname
      port: 8080
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: "traversed-waypoint"
          value: "true"
